--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>App</title>
     <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/react-select@1.2.1/dist/react-select.css">
 </head>
 <body>
-    <div id="root"></div>
     <header>
 		<div>
 			<a href="#">Search</a>
@@ -15,11 +16,12 @@
 		</div>
 		<div class="home">
 			<span>MovieList</span>
-			<a href="#"><img src="img/icon.png" alt="logo"></a>
+            <!-- img/icon.png -->
+			<!-- <a href="#"><img src="" alt="logo"></a> -->
 		</div>
 	</header>
-	<section class="container">
-		<form name="select" action="" onsubmit="someData()" method="get">
+	<section>
+		<!-- <form name="select" action="" onsubmit="someData()" method="get">
 			<div class="selectors">
 				<select name="mType">
 			 		<option>Select Type</option>
@@ -53,60 +55,62 @@
 		   		<input name="title" type="search" placeholder="Search Movie..." class="sbutton">
 		   		<input type="submit" value="Search" class="sfield">
 			</div>
-		</form>
-		<table class="container table">
-			<tr class="trmain">
-				<td></td>
-				<td>Title</td>
-				<td>Type</td>
-				<td>Genre</td>
-				<td>Year</td>
-				<td>Rating</td>
-			</tr>
-			<tr>
-				<td><img src="img/venom.jpg" alt="img"></td>
-				<td>Venom</td>
-				<td>Movie</td>
-				<td>Thriller</td>
-				<td>2018</td>
-				<td>7</td>
-			</tr>
-			<tr>
-				<td><img src="img/thewalkingdead.jpg" alt="img"></td>
-				<td>The Walking Dead</td>
-				<td>TV Series</td>
-				<td>Apocalypse</td>
-				<td>2010</td>
-				<td>8.4</td>
-			</tr>
-			<tr>
-				<td><img src="img/theshawshankredemption.jpg" alt="img"></td>
-				<td>The Shawshank Redemption</td>
-				<td>Movie</td>
-				<td>Drama</td>
-				<td>1994</td>
-				<td>9.3</td>
-			</tr>
-			<tr>
-				<td><img src="img/walle.jpg" alt="img"></td>
-				<td>WALL-E</td>
-				<td>Movie</td>
-				<td>Adventure</td>
-				<td>2008</td>
-				<td>8.4</td>
-			</tr>
-			<tr>
-				<td><img src="img/up.jpg" alt="img"></td>
-				<td>Up</td>
-				<td>Movie</td>
-				<td>Adventure</td>
-				<td>2009</td>
-				<td>8.3</td>
-			</tr>
-		</table>
-		<div class="page">
+		</form> -->
+        <div id="root">
+    		<!-- <table class="container table">
+    			<tr class="trmain">
+    				<td></td>
+    				<td>Title</td>
+    				<td>Type</td>
+    				<td>Genre</td>
+    				<td>Year</td>
+    				<td>Rating</td>
+    			</tr>
+    			<tr>
+    				<td><img src="img/venom.jpg" alt="img"></td>
+    				<td>Venom</td>
+    				<td>Movie</td>
+    				<td>Thriller</td>
+    				<td>2018</td>
+    				<td>7</td>
+    			</tr>
+    			<tr>
+    				<td><img src="img/thewalkingdead.jpg" alt="img"></td>
+    				<td>The Walking Dead</td>
+    				<td>TV Series</td>
+    				<td>Apocalypse</td>
+    				<td>2010</td>
+    				<td>8.4</td>
+    			</tr>
+    			<tr>
+    				<td><img src="img/theshawshankredemption.jpg" alt="img"></td>
+    				<td>The Shawshank Redemption</td>
+    				<td>Movie</td>
+    				<td>Drama</td>
+    				<td>1994</td>
+    				<td>9.3</td>
+    			</tr>
+    			<tr>
+    				<td><img src="img/walle.jpg" alt="img"></td>
+    				<td>WALL-E</td>
+    				<td>Movie</td>
+    				<td>Adventure</td>
+    				<td>2008</td>
+    				<td>8.4</td>
+    			</tr>
+    			<tr>
+    				<td><img src="img/up.jpg" alt="img"></td>
+    				<td>Up</td>
+    				<td>Movie</td>
+    				<td>Adventure</td>
+    				<td>2009</td>
+    				<td>8.3</td>
+    			</tr>
+    		</table> -->
+        </div>
+		<!-- <div class="page">
 			<button><<</button><button>1</button><button>2</button><button>3</button><button>4</button><button>5</button><button>>></button>
-		</div>
+		</div> -->
 	</section>
 	<footer>
 		<div>
